--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ build/
 .sts4-cache
 bin/
 !**/src/main/**/bin/
-!**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
 .idea
@@ -25,6 +24,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+application.properties
 
 ### NetBeans ###
 /nbproject/private/
