--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
 HELP.md
 .gradle
-build/*
-!build/
-!build/libs/
-!build/libs/**
+build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 .env
 
 ### STS ###
