--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 HELP.md
 .gradle
-build/
+build/*
+!build/
+!build/libs/
+!build/libs/**
 !gradle/wrapper/gradle-wrapper.jar
-.env
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### STS ###
 .apt_generated
@@ -24,6 +28,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 application.properties
+application.yml
 
 ### NetBeans ###
 /nbproject/private/
