feat. 환경설정 하드코딩 제거

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 HELP.md
 .gradle
 build/*
-!build/
-!build/libs/
-!build/libs/**
+build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### STS ###
 .apt_generated
@@ -27,8 +23,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-application.properties
-application.yml
 
 ### NetBeans ###
 /nbproject/private/
