test. cron 주기 1분 변경

--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -4,7 +4,7 @@ name: Railway Service Flapping
 on:
   schedule:
     # 매 5분마다 실행
-    - cron: '*/5 * * * *'
+    - cron: '* * * * *'
 
 jobs:
   control:
