--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -1,9 +1,14 @@
 name: Railway Service Schedule
-
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
 on:
   schedule:
-    # 매 5분마다 실행
-    - cron: '* * * * *'
+    # UTC 00:00 → KST 09:00, 월~금에만 서비스 시작
+    - cron: '0 0 * * 1-5'
+    # UTC 10:00 → KST 19:00, 월~금에만 서비스 종료
+    - cron: '0 10 * * 1-5'
 
 jobs:
   control:
