--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -24,7 +24,7 @@ jobs:
           # Railway CLI는 RAILWAY_API_TOKEN 환경변수로 인증
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
             echo "▶ 서비스 중지: $SERVICE_ID"
-            railway stop --project $PROJECT_ID --service $SERVICE_ID || true
+            railway down --project $PROJECT_ID --service $SERVICE_ID || true
             echo "▶ 서비스 시작: $SERVICE_ID"
             railway up   --project $PROJECT_ID --service $SERVICE_ID --detach
           done
