--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -2,10 +2,8 @@ name: Railway Service Schedule
 on:
   workflow_dispatch:
   schedule:
-    # UTC 00:00 → KST 09:00, 월~금에만 서비스 시작
-    - cron: '0 0 * * 1-5'
-    # UTC 10:00 → KST 19:00, 월~금에만 서비스 종료
-    - cron: '0 10 * * 1-5'
+    - cron: '0 0 * * *'   # KST 09:00
+    - cron: '0 10 * * *'  # KST 19:00
 
 jobs:
   control:
@@ -21,10 +19,11 @@ jobs:
 
       - name: 서비스 플랩(끄고→켜기)
         run: |
-          # Railway CLI는 RAILWAY_API_TOKEN 환경변수로 인증
+          HOUR=$(date +'%H')
+          echo "현재 UTC 시간: $HOUR"
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
             echo "▶ 서비스 중지: $SERVICE_ID"
-            railway down --project $PROJECT_ID --service $SERVICE_ID || true
-            echo "▶ 서비스 시작: $SERVICE_ID"
-            railway up   --project $PROJECT_ID --service $SERVICE_ID --detach
+            railway link -p $PROJECT_ID -s $SERVICE_ID
+            railway down --yes || true
+            fi
           done
