--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -22,8 +22,37 @@ jobs:
           HOUR=$(date +'%H')
           echo "현재 UTC 시간: $HOUR"
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
-            echo "▶ 서비스 중지: $SERVICE_ID"
+            if [ "$HOUR" = "00" ]; then
+              echo "▶ 서비스 시작: $SERVICE_ID"
+              railway link -p $PROJECT_ID -s $SERVICE_ID
+              railway up --detach
+            elif [ "$HOUR" = "10" ]; then
+              echo "▶ 서비스 중지: $SERVICE_ID"
+              railway link -p $PROJECT_ID -s $SERVICE_ID
+              railway down --yes || true
+            else
+              echo "스케줄 외 시간입니다: $HOUR, 작업을 수행하지 않습니다."
+            fi
+          done
+
+  test-stop:
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    env:
+      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+      PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
+      SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}
+    steps:
+      - name: Install Railway CLI
+        run: npm install -g @railway/cli
+
+      - name: Login (token)
+        run: railway login --token $RAILWAY_API_TOKEN
+
+      - name: Test Stop Services
+        run: |
+          for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
+            echo "▶ 테스트 종료: $SERVICE_ID"
             railway link -p $PROJECT_ID -s $SERVICE_ID
             railway down --yes || true
-            fi
           done
