--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Test Stop Services
         run: |
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
-            echo "▶ 테스트 종료: $SERVICE_ID"
+            echo "▶ 서비스 시작: $SERVICE_ID"
             railway link -p $PROJECT_ID -s $SERVICE_ID
-            railway down --yes || true
+            railway up --detach
           done
