--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -9,7 +9,7 @@ jobs:
   control:
     runs-on: ubuntu-latest
     env:
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
       PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
       SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}  # "svc1,svc2,svc3" 형태
 
@@ -44,12 +44,12 @@ jobs:
       SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}
     steps:
       - name: Install Railway CLI
-        run: npm install -g @railway/cli@3.14.0
+        run: npm install -g @railway/cli
 
       - name: Test Stop Services
         run: |
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
             echo "▶ 서비스 시작: $SERVICE_ID"
             railway link -p $PROJECT_ID -s $SERVICE_ID 
-            railway up --detach
+            railway redeploy --service $SERVICE_ID --ci
           done
