--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'   # KST 09:00
-    - cron: '0 10 * * *'  # KST 19:00
+    - cron: '0 2 * * *'  # KST 11:00
 
 jobs:
   control:
@@ -24,9 +24,9 @@ jobs:
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
             if [ "$HOUR" = "00" ]; then
               echo "▶ 서비스 시작: $SERVICE_ID"
-              railway link -p $PROJECT_ID -s $SERVICE_ID
-              railway up --detach
-            elif [ "$HOUR" = "10" ]; then
+              railway link -p $PROJECT_ID -s $SERVICE_ID 
+              railway up --service $SERVICE_ID --yes
+            elif [ "$HOUR" = "2" ]; then
               echo "▶ 서비스 중지: $SERVICE_ID"
               railway link -p $PROJECT_ID -s $SERVICE_ID
               railway down --yes || true
@@ -39,7 +39,7 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     env:
-      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+      RAILWAY_TOKEN:     ${{ secrets.RAILWAY_API_TOKEN }}
       PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
       SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}
     steps:
@@ -51,5 +51,5 @@ jobs:
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
             echo "▶ 서비스 시작: $SERVICE_ID"
             railway link -p $PROJECT_ID -s $SERVICE_ID 
-            railway redeploy --service $SERVICE_ID --yes
+            railway up --service $SERVICE_ID --yes
           done
