--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -9,7 +9,7 @@ jobs:
   control:
     runs-on: ubuntu-latest
     env:
-      RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
       PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
       SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}  # "svc1,svc2,svc3" 형태
 
