--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -8,17 +8,14 @@ on:
 jobs:
   control:
     runs-on: ubuntu-latest
+    container: ghcr.io/railwayapp/cli:latest
     env:
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
-      PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
-      SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}  # "svc1,svc2,svc3" 형태
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_PROJECT_TOKEN }}
+      PROJECT_ID:    ${{ secrets.RAILWAY_PROJECT_ID }}
+      SERVICE_IDS:   ${{ secrets.RAILWAY_SERVICE_IDS }}  # "svc1,svc2,svc3" 형태
 
     steps:
-      - name: Railway CLI 설치
-        run: npm install -g @railway/cli
-
-      - name: Railway CLI 로그인
-        run: echo "$RAILWAY_TOKEN" | railway login --browserless
+      - uses: actions/checkout@v3
 
       - name: 서비스 플랩(끄고→켜기)
         run: |
@@ -41,17 +38,14 @@ jobs:
   test-stop:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
+    container: ghcr.io/railwayapp/cli:latest
     env:
-      RAILWAY_TOKEN:     ${{ secrets.RAILWAY_API_TOKEN }}
-      PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
-      SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_PROJECT_TOKEN }}
+      PROJECT_ID:    ${{ secrets.RAILWAY_PROJECT_ID }}
+      SERVICE_IDS:   ${{ secrets.RAILWAY_SERVICE_IDS }}
     steps:
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
+      - uses: actions/checkout@v3
         
-      - name: Railway CLI 로그인
-        run: echo "$RAILWAY_TOKEN" | railway login --browserless
-
       - name: Test Stop Services
         run: |
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
