--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -42,17 +42,14 @@ jobs:
     env:
       RAILWAY_TOKEN:     ${{ secrets.RAILWAY_PROJECT_TOKEN }}
       PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
-      SERVICE_ID:        ${{ secrets.RAILWAY_SERVICE_ID }}
+      SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}
     steps:
       - uses: actions/checkout@v3
-
-      - name: Link Railway project
-        run: railway link -p $PROJECT_ID -s $SERVICE_ID
 
       - name: Deploy to Railway
         run: |
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
-            echo "▶ 테스트 종료: $SERVICE_ID"
+            echo "▶ 테스트 시작: $SERVICE_ID"
             railway link -p $PROJECT_ID -s $SERVICE_ID
             railway up --service $SERVICE_ID --yes
           done
