--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -35,21 +35,17 @@ jobs:
             fi
           done
 
-  test-stop:
-    if: github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    container: ghcr.io/railwayapp/cli:latest
-    env:
-      RAILWAY_TOKEN:     ${{ secrets.RAILWAY_PROJECT_TOKEN }}
-      PROJECT_ID:        ${{ secrets.RAILWAY_PROJECT_ID }}
-      SERVICE_IDS:       ${{ secrets.RAILWAY_SERVICE_IDS }}
     steps:
       - uses: actions/checkout@v3
 
-      - name: Deploy to Railway
+      - name: Deploy All Services
         run: |
+          # 디버깅용: 토큰이 잘 넘어오는지(안 민감한 값인 앞/뒤 4글자만)
+          echo "Token head: ${RAILWAY_TOKEN:0:4}…, tail: ${RAILWAY_TOKEN: -4}"
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
-            echo "▶ 테스트 시작: $SERVICE_ID"
+            echo "▶ Deploying service: $SERVICE_ID"
+            # 프로젝트와 서비스 연결 (환경은 기본 production)
             railway link -p $PROJECT_ID -s $SERVICE_ID
+            # 실제 업로드/배포
             railway up --service $SERVICE_ID --yes
           done
