--- a/.github/workflows/railway-schedule.yml
+++ b/.github/workflows/railway-schedule.yml
@@ -1,7 +1,7 @@
 name: Railway Service Schedule
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
   schedule:
     - cron: '0 0 * * *'   # UTC 00:00 → KST 09:00
     - cron: '0 2 * * *'   # UTC 02:00 → KST 11:00
@@ -9,15 +9,14 @@ on:
 jobs:
   control:
     runs-on: ubuntu-latest
-    container: ghcr.io/railwayapp/cli:latest
+    container:
+      image: ghcr.io/railwayapp/cli:latest
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
       PROJECT_ID:    ${{ secrets.RAILWAY_PROJECT_ID }}
       SERVICE_IDS:   ${{ secrets.RAILWAY_SERVICE_IDS }}
-
     steps:
       - uses: actions/checkout@v3
-
       - name: 서비스 플랩(끄고→켜기)
         run: |
           HOUR=$(date +'%H')
@@ -36,22 +35,21 @@ jobs:
             fi
           done
 
-  test-stop:
-    if: github.event_name == 'workflow_dispatch'
+  railway-deploy:
     runs-on: ubuntu-latest
-    container: ghcr.io/railwayapp/cli:latest
+    container:
+      image: ghcr.io/railwayapp/cli:latest
     env:
       RAILWAY_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
       PROJECT_ID:    ${{ secrets.RAILWAY_PROJECT_ID }}
       SERVICE_IDS:   ${{ secrets.RAILWAY_SERVICE_IDS }}
-
     steps:
       - uses: actions/checkout@v3
-
-      - name: Deploy to Railway
+      - name: Deploy Railway Services
         run: |
+          echo "Deploying Railway services: $SERVICE_IDS"
           for SERVICE_ID in $(echo $SERVICE_IDS | tr ',' ' '); do
-            echo "▶ 테스트 종료: $SERVICE_ID"
+            echo "▶ 서비스 배포: $SERVICE_ID"
             railway link -p $PROJECT_ID -s $SERVICE_ID
             railway up --service $SERVICE_ID --yes
           done
