feat. 배치서버 포트 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
+server:
+  port: 4000
+
 spring:
+  main:
+    web-application-type: servlet
   datasource:
     url: ${SPRING_DATASOURCE_PASSWORD}
     username: ${SPRING_DATASOURCE_USERNAME}
